[gd_scene load_steps=53 format=2]

[ext_resource path="res://player/player.png" type="Texture" id=1]
[ext_resource path="res://player/Ship.gd" type="Script" id=2]
[ext_resource path="res://level/tileset.png" type="Texture" id=3]
[ext_resource path="res://items/Button.tscn" type="PackedScene" id=4]
[ext_resource path="res://Light.tscn" type="PackedScene" id=5]
[ext_resource path="res://player/jet.ogg" type="AudioStream" id=6]
[ext_resource path="res://player/shoot.wav" type="AudioStream" id=7]
[ext_resource path="res://player/jump.wav" type="AudioStream" id=8]
[ext_resource path="res://player/step.wav" type="AudioStream" id=9]
[ext_resource path="res://items/Bubbles.tscn" type="PackedScene" id=10]
[ext_resource path="res://spotlight.png" type="Texture" id=11]

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="OccluderPolygon2D" id=4]
polygon = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="OccluderPolygon2D" id=5]
polygon = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="OccluderPolygon2D" id=6]
polygon = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="OccluderPolygon2D" id=7]
polygon = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="OccluderPolygon2D" id=8]
polygon = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="OccluderPolygon2D" id=9]
polygon = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="OccluderPolygon2D" id=10]
polygon = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="OccluderPolygon2D" id=11]
polygon = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="OccluderPolygon2D" id=12]
polygon = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=19]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=20]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=21]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=22]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=23]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="TileSet" id=24]
0/name = "tileset.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 80, 48 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 256, Vector2( 0, 1 ), 260, Vector2( 0, 2 ), 4, Vector2( 1, 0 ), 320, Vector2( 1, 1 ), 325, Vector2( 1, 2 ), 5, Vector2( 2, 0 ), 64, Vector2( 2, 1 ), 65, Vector2( 2, 2 ), 1, Vector2( 3, 0 ), 321, Vector2( 3, 1 ), 69, Vector2( 4, 0 ), 324, Vector2( 4, 1 ), 261 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [ Vector2( 0, 0 ), SubResource( 1 ), Vector2( 0, 1 ), SubResource( 2 ), Vector2( 0, 2 ), SubResource( 3 ), Vector2( 1, 0 ), SubResource( 4 ), Vector2( 1, 2 ), SubResource( 5 ), Vector2( 2, 0 ), SubResource( 6 ), Vector2( 2, 1 ), SubResource( 7 ), Vector2( 2, 2 ), SubResource( 8 ), Vector2( 3, 0 ), SubResource( 9 ), Vector2( 3, 1 ), SubResource( 10 ), Vector2( 4, 0 ), SubResource( 11 ), Vector2( 4, 1 ), SubResource( 12 ) ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 13 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 18 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 19 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 20 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "tileset.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 48, 48, 16 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 16, 16 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 21 )
1/shape_one_way = true
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 21 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 22 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 23 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[sub_resource type="Animation" id=39]
resource_name = "spin"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TopBlade:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 2, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0 ), Vector2( 1, -1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BottomBlade:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 2, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1, -1 ), Vector2( 1, 0 ), Vector2( 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=40]
extents = Vector2( 4, 64 )

[sub_resource type="TileSet" id=25]
0/name = "tileset.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 48, 32, 32, 16 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="PhysicsMaterial" id=26]
friction = 0.1

[sub_resource type="CircleShape2D" id=27]
radius = 12.0

[sub_resource type="AudioStreamRandomPitch" id=28]
audio_stream = ExtResource( 8 )

[sub_resource type="AudioStreamRandomPitch" id=29]
audio_stream = ExtResource( 9 )
random_pitch = 1.2

[sub_resource type="Animation" id=30]
resource_name = "fall"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=31]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=32]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=33]
resource_name = "run"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 0, 2, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Step")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="SegmentShape2D" id=34]

[sub_resource type="CircleShape2D" id=35]
radius = 4.0

[sub_resource type="PhysicsMaterial" id=36]
friction = 0.2

[sub_resource type="RectangleShape2D" id=37]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=38]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=41]
extents = Vector2( 15, 15 )

[node name="Ship" type="RigidBody2D"]
collision_mask = 0
mass = 10.0
gravity_scale = 0.0
linear_damp = 0.1
angular_damp = 10.0
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 24 )
cell_size = Vector2( 16, 16 )
collision_use_parent = true
collision_use_kinematic = true
format = 1
tile_data = PoolIntArray( -327685, 0, 0, -327684, 0, 1, -327683, 0, 1, -327682, 0, 2, -262149, 0, 65536, -262148, 0, 65537, -262147, 0, 65537, -262146, 0, 3, -262145, 0, 2, -196615, 0, 0, -196614, 0, 1, -196613, 0, 4, -196612, 0, 65537, -196611, 0, 65537, -196610, 0, 65537, -196609, 0, 3, -262144, 0, 1, -262143, 0, 1, -262142, 0, 1, -262141, 0, 1, -262140, 0, 1, -262139, 0, 2, -131079, 0, 65536, -131078, 0, 65539, -131077, 0, 131073, -131076, 0, 131073, -131075, 0, 131073, -131074, 0, 131073, -131073, 0, 131073, -196608, 0, 131073, -196607, 0, 131073, -196606, 0, 131073, -196605, 0, 131073, -196604, 0, 65540, -196603, 0, 3, -196602, 0, 1, -196601, 0, 2, -65543, 0, 65536, -65542, 0, 65538, -131068, 0, 131072, -131067, 0, 131073, -131066, 0, 65540, -131065, 0, 65538, -9, 0, 0, -8, 0, 1, -7, 0, 4, -6, 0, 65538, -65530, 0, 65536, -65529, 0, 65538, 65527, 0, 65536, 65528, 0, 65537, 65529, 0, 65537, 65530, 0, 65538, 65531, 1, 1, 65532, 1, 1, 65533, 1, 1, 65534, 1, 2, 6, 0, 65536, 7, 0, 65538, 131063, 0, 65536, 131064, 0, 65537, 131065, 0, 65537, 131066, 0, 65538, 65539, 0, 0, 65540, 0, 1, 65541, 0, 1, 65542, 0, 4, 65543, 0, 65538, 196599, 0, 131072, 196600, 0, 65540, 196601, 0, 65537, 196602, 0, 65538, 131073, 1, 0, 131074, 1, 1, 131075, 0, 131072, 131076, 0, 65540, 131077, 0, 65537, 131078, 0, 65537, 131079, 0, 65538, 262136, 0, 131072, 262137, 0, 65540, 262138, 0, 65538, 196612, 0, 65536, 196613, 0, 65537, 196614, 0, 65539, 196615, 0, 131074, 327673, 0, 65536, 327674, 0, 3, 327675, 0, 1, 327676, 0, 1, 327677, 0, 1, 327678, 0, 1, 327679, 0, 1, 262144, 0, 1, 262145, 0, 1, 262146, 0, 1, 262147, 0, 1, 262148, 0, 4, 262149, 0, 65537, 262150, 0, 65538, 393209, 0, 131072, 393210, 0, 131073, 393211, 0, 131073, 393212, 0, 131073, 393213, 0, 131073, 393214, 0, 131073, 393215, 0, 131073, 327680, 0, 131073, 327681, 0, 131073, 327682, 0, 131073, 327683, 0, 131073, 327684, 0, 131073, 327685, 0, 131073, 327686, 0, 131074 )

[node name="Bubbles" parent="TileMap" instance=ExtResource( 10 )]
position = Vector2( -40, -80 )

[node name="TopBlade" type="Sprite" parent="TileMap"]
position = Vector2( -152, 16 )
texture = ExtResource( 3 )
offset = Vector2( 0, -40 )
region_enabled = true
region_rect = Rect2( 32, 64, 16, 64 )

[node name="BottomBlade" type="Sprite" parent="TileMap"]
position = Vector2( -152, 16 )
scale = Vector2( 1, -1 )
z_index = 1
texture = ExtResource( 3 )
offset = Vector2( 0, -40 )
region_enabled = true
region_rect = Rect2( 32, 64, 16, 64 )

[node name="Anim" type="AnimationPlayer" parent="TileMap"]
autoplay = "spin"
playback_speed = 0.5
anims/spin = SubResource( 39 )

[node name="BladeCollider" type="Area2D" parent="TileMap"]
collision_layer = 17
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap/BladeCollider"]
position = Vector2( -152, 16 )
shape = SubResource( 40 )

[node name="BgTiles" type="TileMap" parent="."]
z_index = -5
tile_set = SubResource( 25 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -65541, 0, 0, -65540, 0, 1, -65539, 0, 0, -65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 1, -5, 0, 0, -4, 0, 1, -3, 0, 0, -2, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 1, -65531, 0, 0, 65531, 0, 0, 65532, 0, 1, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 1, 5, 0, 0, 131067, 0, 1, 131068, 0, 0, 131069, 0, 1, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 1, 65540, 0, 1, 65541, 0, 0, 196603, 0, 1, 196604, 0, 0, 196605, 0, 1, 196606, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 1, 131074, 0, 0, 131075, 0, 1, 262139, 0, 1, 262140, 0, 0, 262141, 0, 1, 262142, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 1, 196610, 0, 0, 196611, 0, 1 )

[node name="Player" type="RigidBody2D" parent="."]
position = Vector2( -56, -16 )
collision_layer = 2
mode = 2
physics_material_override = SubResource( 26 )
linear_damp = 2.0

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 1 )
vframes = 2
hframes = 3
frame = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 0, 3 )
shape = SubResource( 27 )
__meta__ = {
"_edit_lock_": true
}

[node name="Jump" type="AudioStreamPlayer2D" parent="Player"]
stream = SubResource( 28 )
volume_db = -6.0
__meta__ = {
"_edit_lock_": true
}

[node name="Step" type="AudioStreamPlayer2D" parent="Player"]
stream = SubResource( 29 )
volume_db = 8.0
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
autoplay = "idle"
anims/fall = SubResource( 30 )
anims/idle = SubResource( 31 )
anims/jump = SubResource( 32 )
anims/run = SubResource( 33 )

[node name="RayCast2D" type="RayCast2D" parent="Player"]
position = Vector2( 0, 14 )
enabled = true
cast_to = Vector2( 0, 4 )

[node name="ButtonLeft" parent="." instance=ExtResource( 4 )]
position = Vector2( -64, 64 )

[node name="Label" type="Label" parent="ButtonLeft"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 16.0
text = "<<--"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonRight" parent="." instance=ExtResource( 4 )]
position = Vector2( 72, 16 )

[node name="Label" type="Label" parent="ButtonRight"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 16.0
text = "-->>"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonShootLeft" parent="." instance=ExtResource( 4 )]
position = Vector2( 48, 64 )

[node name="Label2" type="Label" parent="ButtonShootLeft"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 16.0
text = "<--!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonShootRight" parent="." instance=ExtResource( 4 )]
position = Vector2( -8, 64 )

[node name="Label2" type="Label" parent="ButtonShootRight"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 16.0
text = "!-->"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ButtonSpecial" parent="." instance=ExtResource( 4 )]
position = Vector2( -56, 0 )

[node name="Label2" type="Label" parent="ButtonSpecial"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 16.0
text = "???"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LeftShootTimer" type="Timer" parent="."]
wait_time = 0.6

[node name="RightShootTimer" type="Timer" parent="."]
wait_time = 0.6

[node name="LeftCannon" type="Sprite" parent="."]
position = Vector2( -160, 16 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 48, 48, 32, 32 )

[node name="Bubbles" parent="LeftCannon" instance=ExtResource( 10 )]

[node name="SuperBubbles" parent="LeftCannon" instance=ExtResource( 10 )]
modulate = Color( 0.466667, 0.556863, 0.729412, 1 )
emitting = false
amount = 32
direction = Vector2( -1, 0 )
spread = 15.0
initial_velocity = 400.0
scale_amount = 0.3
scale_amount_random = 0.5

[node name="Spot" type="Light2D" parent="LeftCannon"]
visible = false
position = Vector2( -240, 0 )
rotation = 1.5708
texture = ExtResource( 11 )
range_layer_min = -101

[node name="RightCannon" type="Sprite" parent="."]
position = Vector2( 144, 16 )
scale = Vector2( -1, 1 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 48, 48, 32, 32 )

[node name="Bubbles" parent="RightCannon" instance=ExtResource( 10 )]

[node name="SuperBubbles" parent="RightCannon" instance=ExtResource( 10 )]
modulate = Color( 0.466667, 0.556863, 0.729412, 1 )
rotation = 3.14159
emitting = false
amount = 32
spread = 15.0
initial_velocity = 400.0
scale_amount = 0.3
scale_amount_random = 0.5

[node name="Spot" type="Light2D" parent="RightCannon"]
visible = false
position = Vector2( -240, 0 )
rotation = -1.5708
scale = Vector2( 1, -1 )
texture = ExtResource( 11 )
range_layer_min = -101

[node name="PinJoint2D" type="PinJoint2D" parent="."]
position = Vector2( -8, -32 )
node_a = NodePath("..")
node_b = NodePath("Rope")

[node name="Rope" type="RigidBody2D" parent="PinJoint2D"]
position = Vector2( 0, 8 )
collision_layer = 0
mass = 0.1

[node name="CollisionShape2D" type="CollisionShape2D" parent="PinJoint2D/Rope"]
shape = SubResource( 34 )

[node name="Line2D" type="Line2D" parent="PinJoint2D/Rope"]
points = PoolVector2Array( 0, -8, 0, 8 )
width = 2.0
default_color = Color( 0, 0, 0, 1 )

[node name="Bulb" type="RigidBody2D" parent="PinJoint2D"]
position = Vector2( 0, 24 )
mass = 0.2

[node name="Sprite" type="Sprite" parent="PinJoint2D/Bulb"]
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 80, 48, 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PinJoint2D/Bulb"]
position = Vector2( 0, 3 )
shape = SubResource( 35 )

[node name="Light" parent="PinJoint2D/Bulb" instance=ExtResource( 5 )]

[node name="PinJoint2D" type="PinJoint2D" parent="PinJoint2D"]
position = Vector2( 0, 16 )
node_a = NodePath("../Rope")
node_b = NodePath("../Bulb")

[node name="PinJoint2D2" type="PinJoint2D" parent="."]
position = Vector2( 40, -32 )
node_a = NodePath("..")
node_b = NodePath("Rope")

[node name="Rope" type="RigidBody2D" parent="PinJoint2D2"]
position = Vector2( 0, 8 )
collision_layer = 0
mass = 0.1

[node name="CollisionShape2D" type="CollisionShape2D" parent="PinJoint2D2/Rope"]
shape = SubResource( 34 )

[node name="Line2D" type="Line2D" parent="PinJoint2D2/Rope"]
points = PoolVector2Array( 0, -8, 0, 8 )
width = 2.0
default_color = Color( 0, 0, 0, 1 )

[node name="Rope2" type="RigidBody2D" parent="PinJoint2D2"]
position = Vector2( 0, 24 )
collision_layer = 0
mass = 0.1

[node name="CollisionShape2D" type="CollisionShape2D" parent="PinJoint2D2/Rope2"]
shape = SubResource( 34 )

[node name="Line2D" type="Line2D" parent="PinJoint2D2/Rope2"]
points = PoolVector2Array( 0, -8, 0, 8 )
width = 2.0
default_color = Color( 0, 0, 0, 1 )

[node name="Bulb" type="RigidBody2D" parent="PinJoint2D2"]
position = Vector2( 0, 40 )
mass = 0.2

[node name="Sprite" type="Sprite" parent="PinJoint2D2/Bulb"]
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 80, 48, 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PinJoint2D2/Bulb"]
position = Vector2( 0, 3 )
shape = SubResource( 35 )

[node name="Light" parent="PinJoint2D2/Bulb" instance=ExtResource( 5 )]

[node name="PinJoint2D" type="PinJoint2D" parent="PinJoint2D2"]
position = Vector2( 0, 32 )
node_a = NodePath("../Rope2")
node_b = NodePath("../Bulb")

[node name="PinJoint2D2" type="PinJoint2D" parent="PinJoint2D2"]
position = Vector2( 0, 16 )
node_a = NodePath("../Rope2")
node_b = NodePath("../Rope")

[node name="Crate" type="RigidBody2D" parent="."]
position = Vector2( 32, 56 )
z_index = -2
collision_layer = 4
collision_mask = 5
mass = 0.01
physics_material_override = SubResource( 36 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Crate"]
shape = SubResource( 37 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Crate"]
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 80, 64, 16, 16 )
__meta__ = {
"_edit_lock_": true
}

[node name="Crate2" type="RigidBody2D" parent="."]
position = Vector2( -64, -16 )
z_index = -2
collision_layer = 4
collision_mask = 5
mass = 0.01
physics_material_override = SubResource( 36 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Crate2"]
shape = SubResource( 37 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Crate2"]
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 80, 64, 16, 16 )
__meta__ = {
"_edit_lock_": true
}

[node name="Crate3" type="RigidBody2D" parent="."]
position = Vector2( -32, 48 )
z_index = -2
collision_layer = 4
collision_mask = 5
mass = 0.01
physics_material_override = SubResource( 36 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Crate3"]
shape = SubResource( 38 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Crate3"]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 80, 64, 16, 16 )
__meta__ = {
"_edit_lock_": true
}

[node name="EngineLeft" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -200, 0 )
stream = ExtResource( 6 )
volume_db = -4.0
pitch_scale = 0.2

[node name="EngineRight" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 200, 0 )
stream = ExtResource( 6 )
volume_db = -4.0
pitch_scale = 0.2

[node name="ShootLeft" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -200, 0 )
stream = ExtResource( 7 )
volume_db = -8.0

[node name="ShootRight" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 200, 0 )
stream = ExtResource( 7 )
volume_db = -8.0

[node name="LeftPipeShape" type="CollisionShape2D" parent="."]
position = Vector2( -160, 16 )
shape = SubResource( 41 )

[node name="RightPipeShape" type="CollisionShape2D" parent="."]
position = Vector2( 144, 16 )
shape = SubResource( 41 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = 100.0
margin_right = 192.0
margin_bottom = 154.0
text = "Arrow keys: run and jump"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ButtonLeft" to="." method="_on_ButtonLeft_pressed"]
[connection signal="released" from="ButtonLeft" to="." method="_on_ButtonLeft_released"]
[connection signal="pressed" from="ButtonRight" to="." method="_on_ButtonRight_pressed"]
[connection signal="released" from="ButtonRight" to="." method="_on_ButtonRight_released"]
[connection signal="pressed" from="ButtonShootLeft" to="." method="_on_ButtonShootLeft_pressed"]
[connection signal="released" from="ButtonShootLeft" to="." method="_on_ButtonShootLeft_released"]
[connection signal="pressed" from="ButtonShootRight" to="." method="_on_ButtonShootRight_pressed"]
[connection signal="released" from="ButtonShootRight" to="." method="_on_ButtonShootRight_released"]
[connection signal="pressed" from="ButtonSpecial" to="." method="_on_ButtonSpecial_pressed"]
[connection signal="released" from="ButtonSpecial" to="." method="_on_ButtonSpecial_released"]
[connection signal="timeout" from="LeftShootTimer" to="." method="_on_LeftShootTimer_timeout"]
[connection signal="timeout" from="RightShootTimer" to="." method="_on_RightShootTimer_timeout"]
